Revert "test without netlify redirects"
This reverts commit b2fbd59d4a6c457bc12062911053629528a67f84.

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,8 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[[redirects]]
+  from = "/*"
+  to = "/redirect-nextjs-test/index.html"
+  status = 200
